Fix color precedence in dark mode canvas background (#4518)

--- a/css/activities.css
+++ b/css/activities.css
@@ -718,8 +718,6 @@ table {
 
 #canvas {
   overflow-y: visible;
-  background-color: #FFFFFF; 
-  width: 100%;
 }
 
 #statusDiv {
